<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:gravity="center">

        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="10dp"
              android:textSize="12sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="12/02/17"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="ville"/>


        <ImageView
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow_back_black_48dp"
            android:tint="@color/YellowGold"/>


        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:layout_gravity="center"

            android:layout_margin="4dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:text="ville"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/Yellow"
        android:elevation="4dp"
        android:padding="8dp">
        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:id="@+id/heure_depart"
            android:layout_weight="1"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:padding="4dp"

            android:gravity="center"
            android:text="@string/depart"/>
        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:id="@+id/heure_arrivee"

            android:layout_weight="1"
            android:padding="4dp"

            android:gravity="center"
            android:layout_width="85dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/arrivee"/>
        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:padding="4dp"

            android:gravity="center"

            android:layout_width="80dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/price2"/>
        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:id="@+id/info"
            android:layout_weight="1"
            android:padding="4dp"
          android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infos2"/>
    </LinearLayout>
    <ListView
        android:id="@+id/list_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bleuDarkCTM"
        android:elevation="4dp"
        android:padding="8dp">
        <com.stanly.ghazala.Widgets.AutoResizeTextView

            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
              android:layout_weight="1"
            android:padding="4dp"

            android:gravity="center"
            android:text="Points Arrêt"/>
        <com.stanly.ghazala.Widgets.AutoResizeTextView

            android:layout_weight="1"
            android:padding="4dp"

            android:gravity="center"
            android:layout_width="85dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Nature"/>
        <com.stanly.ghazala.Widgets.AutoResizeTextView

            android:padding="4dp"
            android:layout_weight="1"
            android:gravity="center"

            android:layout_width="80dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Durée"/>

    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="4dp"
        android:padding="8dp">
        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:textColor="@color/bleuCTM1"
            android:textStyle="bold"
            android:layout_weight="1"
            android:padding="4dp"

            android:gravity="center"
           />
        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:layout_weight="1"
            android:padding="4dp"

            android:gravity="center"
            android:layout_width="85dp"
            android:textColor="@color/bleuCTM1"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Nature"/>
        <com.stanly.ghazala.Widgets.AutoResizeTextView
            android:padding="4dp"
            android:layout_weight="1"
            android:gravity="center"

            android:layout_width="80dp"
            android:textColor="@color/bleuCTM1"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Durée"/>

    </LinearLayout>
</LinearLayout>